# Helmforge

./: .gitignore  README.md  pyproject.toml
HOTAS Control Panel Forensic Spec Set/: 01-hotas-control-panel-master-recovery-index.md  02-product-vision-and-visual-design-system.md  03-core-tuning-engine-mapping-and-modes.md  04-conditional-rules-system.md  05-graphs-and-effective-response-stack.md  06-helm-assistant-specification.md  07-flight-recorder-live-monitor-and-live-overlay.md  08-architecture-performance-rebuild-roadmap-and-unknowns.md  Hotas Control Panel V2  - Phase1A.txt  Hotas Control Panel V2 - HOTAS System Specs.txt  POST REGULAR PHASES - HUMAN WALKTHR.txt  helm_forge_remaining_post_rc_phase_plan.md  helm_forge_two_part_architecture_clarification.md  helm_forge_v_3_naming_and_version_correction_note.md  helmforge_liquid_command_deck_design_philosophy.md  helmforge_liquid_command_deck_implementation_prompt_book.md  helmforge_liquid_motion_philosophy.md  hotas_control_panel_v_2_codex_prompt_book.md
bridge_app/: __init__.py  config_loader.py  ipc.py  main.py  runtime_bench.py  runtime_session.py  service.py  state.py  telemetry_stream.py
packaging/: README.md  build_release.ps1
scripts/: build_liquid_visual_report.py  capture_liquid_ui_screenshots.py  hidhide_setup_probe.py  run_hf_lrdc_acceptance.py  run_hf_lrdc_runtime_bench.py  run_phase19b_kraken.py  run_raw_input_probe.py  runtime_physical_hotas_smoke_probe.py  runtime_setup_check.ps1  runtime_truth_value_probe.py  runtime_tuning_matrix_probe.py
shared_core/: __init__.py
v3_app/: __init__.py  (+3 more)
(+931 files in other folders)
